task11-terminate-correcciones3

--- a/src/main/resources/static/loan-application.html
+++ b/src/main/resources/static/loan-application.html
@@ -68,7 +68,7 @@
                             <select class="form-select form-select-lg " aria-label=".form-select-lg example"
                                 v-model="account">
                                 <option selected value="" class="text-center">ACCOUNTS</option>
-                                <template v-for="account of accounts.accountDTOS">
+                                <template v-for="account of datos2">
                                     <option :value="account.number">{{account.number}}</option>
                                 </template>
                             </select>
