--- a/src/main/resources/static/acconts.html
+++ b/src/main/resources/static/acconts.html
@@ -128,7 +128,7 @@
                                         <div class="">
                                             <button  @click.prevent="filterLoan(valor.id)" class="button1" data-bs-toggle="modal" data-bs-target="#exampleModal4">
                
-                                                <span class="button__text1">PAGAR</span>
+                                                <span class="button__text1">Pay</span>
                                                 <span class="button__icon1"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24"
                                                         stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor"
                                                         height="24" fill="none" class="svg1">
@@ -159,7 +159,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel4">Pagar Prestamos</h1>
+                                <h1 class="modal-title fs-5" id="exampleModalLabel4">Pay loans</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -196,7 +196,7 @@
                                         <select class="form-select form-select-lg " aria-label=".form-select-lg example"
                                             v-model="account">
                                             <option selected value="" class="text-center">ACCOUNTS</option>
-                                            <template v-for="account of datos.accountDTOS">
+                                            <template v-for="account of datos2">
                                                 <option :value="account.number">{{account.number}}</option>
                                             </template>
                                         </select>
@@ -230,12 +230,12 @@
                                     <div>
                                         <label for="corriente" class="pe-5 form-check-label">CURRENT</label>
                                         <input type="radio" name="" id="corriente" class="form-check-input"
-                                            value="CURRENT" v-model="" required>
+                                            value="CURRENT" v-model="type1" required>
                                     </div>
                                     <div>
                                         <label for="ahorro" class="pe-5 form-check-label">SAVING</label>
                                         <input type="radio" name="" id="ahorro" class="form-check-input" value="SAVING"
-                                            v-model="" required>
+                                            v-model="type1" required>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-outline-success mb-3 mt-3 fs-4">Create</button>
@@ -257,10 +257,9 @@
 
 
 
-
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
