--- a/src/main/resources/static/acconts.html
+++ b/src/main/resources/static/acconts.html
@@ -125,7 +125,7 @@
                                         <div>
                                             <p>{{valor.payments}}</p>
                                         </div>
-                                        <div class="">
+                                        <div class="pagar-prestamos">
                                             <button  @click.prevent="filterLoan(valor.id)" class="button1" data-bs-toggle="modal" data-bs-target="#exampleModal4">
                
                                                 <span class="button__text1">Pay</span>
