--- a/src/main/resources/static/cards.html
+++ b/src/main/resources/static/cards.html
@@ -21,7 +21,7 @@
 
     <div class="nav">
       <a class="" href="./acconts.html">Acconts</a>
-      <a class="" href=".#">Cards</a>
+      <a class="" href="#">Cards</a>
       <a class="" href="./transfer.html">Transfer</a>
       <img @click.prevent="logout" class="cerrar" src="./img/cerrar-sesion.png" alt="">
     </div>
